--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="style.css" rel ="stylesheet">
 </head>
 <body> 
-  <h1 class="p-2">Vanakkam 🙏🏽</h1>
+  <h1 class="p-2">Vanakam 🙏🏽</h1>
   <div class="container-fluid" id ="maniblock">
     <p></p>
     <p></p>
@@ -30,7 +30,7 @@
                 How do we Calculate ?
               </button>
               <!-- Modal -->
-              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+              <div class="offcanvas offcanvas-end"  id="offcanvasRight">
                 <div class="offcanvas-header">
                   <h5 id="offcanvasRightLabel">How do we Calculate ?</h5>
                   <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
