--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGPA Calculator</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="style.css" rel ="stylesheet">
+    <link rel="icon" href="Images/cal_icon.png" type="image/gif" sizes="16x16">
 </head>
 <body> 
   <h1 class="p-2">Vanakam 🙏🏽</h1>
@@ -22,7 +24,7 @@
               
               <div class="card-body p-3 ">
                 <h5 class="card-title">CGPA for Engineering Collages <p class="fw-light ">(2019 Regulation)</p></h5>
-                <p class="card-text"> GPA stands for Grade Point Average. Anna university follows grade point calculation(GPA) from 2008 regulation batch students instead of calculating percentage.</p>
+                <p class="card-text"> CGPA stands for Cumulative Grade Points Average. Anna university follows grade point calculation(GPA) from 2008 regulation batch students instead of calculating percentage.</p>
                 <p class="card-text">Compared to percentage method grade point average(GPA) method is good method because each and every subject the performance of the students marks will be considered based on their credit points.
                   Only disadvantage in grade point method is failed student doesn't know about their marks.</p>
                 <!-- Button trigger modal -->
