--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                               <option value="Electrical and Electronics Engineering engineering">Electrical and Electronics Engineering engineering</option>
                               <option value="Artificial Intelligence and Data Science engineering">Artificial Intelligence and Data Science engineering</option>
                               <option value="Science and Humanities engineering">Science and Humanities engineering</option>
-                              <option value="Other">Other</option>
+                              <option value=" -- ">Others</option>
                             </select>
                           </div>
                           <div class="form-label">
