--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGPA Calculator</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="style.css" rel ="stylesheet">
-    <link rel="icon" href="Images/cal_icon.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="Images/icon1.png" type="image/gif" sizes="16x16">
 </head>
-<body> 
+<body style="background: rgb(244, 249, 250);"> 
   <h1 class="p-2">Vanakam 🙏🏽</h1>
   <div class="container-fluid" id ="maniblock">
     <p></p>
@@ -20,18 +19,15 @@
       <div class="container-sm p-3">
         <div class="row">
           <div class="col-md-6 p-3">
-            <div class="card border-white text-black   " style=>
-              
+            <div class="card   "style="background: rgb(244, 249, 250); border:black;">
               <div class="card-body p-3 ">
                 <h5 class="card-title">CGPA for Engineering Collages <p class="fw-light ">(2019 Regulation)</p></h5>
                 <p class="card-text"> CGPA stands for Cumulative Grade Points Average. Anna university follows grade point calculation(GPA) from 2008 regulation batch students instead of calculating percentage.</p>
                 <p class="card-text">Compared to percentage method grade point average(GPA) method is good method because each and every subject the performance of the students marks will be considered based on their credit points.
                   Only disadvantage in grade point method is failed student doesn't know about their marks.</p>
-                <!-- Button trigger modal -->
               <button type="button" class="btn btn-outline-primary " data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
                 How do we Calculate ?
               </button>
-              <!-- Modal -->
               <div class="offcanvas offcanvas-end"  id="offcanvasRight">
                 <div class="offcanvas-header">
                   <h5 id="offcanvasRightLabel">How do we Calculate ?</h5>
@@ -101,7 +97,6 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-
 </body>
 </html>
 
