--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="col-lg-8 ">
             <div class="container-fluid p-3 ">
               <span class="badge bg-secondary">Full Report:</span>
-              <div class="container-fluid p-3 "> 
+              <!-- <div class="container-fluid p-3 "> 
                   <div class="row p-3 rounded " >
                     <div class="col-md-4">
                       <p id="nametag" style="font-family: 'Courier New', Courier, monospace; font-weight: bold;"></p>
@@ -119,7 +119,7 @@
                       <p id="deptag" style="font-family: 'Courier New', Courier, monospace;"></p>
                     </div>
                   </div> 
-              </div>
+              </div> -->
               <div class="container-xxl">
                 <div class="row  rounded">
                   <div class="col-md-4 p-2 ">
